# tinygrad

./: pyproject.toml
