[tool.poetry]
name = "tinygrad"
version = "0.8.0"
description = ""
authors = ["George Hotz <geohot@tinygrad.org>"]
readme = "README.md"
packages = [
    { include = "tinygrad", from = "." },
    { include = "extra", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
tqdm = "^4.66.1"
pyopencl = "^2023.1.4"
sentencepiece = "^0.1.99"
protobuf = "4.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
